# ragprobe

./: .gitignore  CONTRIBUTING.md  README.md  build_kb.py  demo.py  env.example  pyproject.toml  rohanvinayaksagvekar_hw11.py
.github/workflows/: ci.yml
examples/: demo.py  hw11_ragprobe_eval.py  sec_eval.py  sec_eval_results.json  test_judge.py  trial_demo.py
ragprobe/: __init__.py  _utils.py  cli.py  compare.py  evaluator.py  judge.py  probe_engine.py  rag_evaluator.py  reporter.py  retrieval.py  safety.py
ragprobe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ragprobe/core/: cost_guard.py  generator.py  injection_guard.py  monitor.py  rate_limiter.py  retrieval_diagnostic.py  scorer.py  validators.py
ragprobe/prompts/: judge_prompt_v1.txt
tests/: __init__.py  test_cli.py  test_evaluator.py  test_generator.py  test_retrieval.py  test_safety.py  test_scorer.py
